--- a/spark/v3.5/build.gradle
+++ b/spark/v3.5/build.gradle
@@ -255,6 +255,9 @@ project(":iceberg-spark:iceberg-spark-runtime-${sparkMajorVersion}_${scalaVersio
   shadowJar {
     configurations = [project.configurations.runtimeClasspath]
 
+    exclude 'META-INF/versions/21/**'
+    exclude 'META-INF/versions/22/**'
+
     zip64 true
 
     // include the LICENSE and NOTICE files for the shaded Jar
